--- a/.gitignore
+++ b/.gitignore
@@ -159,8 +159,11 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Data folder
 data/
+# PowerPoint
 ppt/
+# Images
 img/kis.jpg
 img/kji.jpg
 img/kju.jpg
